--- a/.github/workflows/shiki-cdb-dev.yaml
+++ b/.github/workflows/shiki-cdb-dev.yaml
@@ -56,5 +56,4 @@ jobs:
           --image "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA" \
           --platform "managed" \
           --allow-unauthenticated
-          --set-env-vars=[PMA_HOST=/cloudsql/$PROJECT_ID:$RUN_REGION:$INSTANCE_ID
-,PMA_SOCKET= /cloudsql/$PROJECT_ID:$RUN_REGION:$INSTANCE_ID]
+          --set-env-vars=[PMA_HOST=/cloudsql/$PROJECT_ID:$RUN_REGION:$INSTANCE_ID,PMA_SOCKET=/cloudsql/$PROJECT_ID:$RUN_REGION:$INSTANCE_ID]
