--- a/.github/workflows/shiki-cdb-dev.yaml
+++ b/.github/workflows/shiki-cdb-dev.yaml
@@ -40,6 +40,8 @@ jobs:
         version: '290.0.1'
         service_account_key: ${{ secrets.SHIKI_CDB_DEV_SA_KEY }}
 
+    - name: Set Project
+        run: gcloud config set project $PROJECT_ID
     # Build and push image to Google Container Registry
     - name: Build
       run: |-
