--- a/.github/workflows/shiki-cdb-dev.yaml
+++ b/.github/workflows/shiki-cdb-dev.yaml
@@ -58,5 +58,5 @@ jobs:
           --image "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA" \
           --platform "managed" \
           --allow-unauthenticated \
-          --set-env-vars=PMA_HOST=/cloudsql/$PROJECT_ID:$RUN_REGION:$INSTANCE_ID,PMA_SOCKET=/cloudsql/$PROJECT_ID:$RUN_REGION:$INSTANCE_ID
+          --set-env-vars=PMA_HOST=/cloudsql/$PROJECT_ID:$RUN_REGION:$INSTANCE_ID,PMA_SOCKET=/cloudsql/$PROJECT_ID:$RUN_REGION:$INSTANCE_ID \
           --add-cloudsql-instances=$INSTANCE_ID
