メモリサイズ

--- a/.github/workflows/shiki-cdb-dev.yaml
+++ b/.github/workflows/shiki-cdb-dev.yaml
@@ -57,6 +57,7 @@ jobs:
           --region "$RUN_REGION" \
           --image "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA" \
           --platform "managed" \
+          --memory=1Gi \
           --allow-unauthenticated \
           --set-env-vars=PMA_HOST=/cloudsql/$PROJECT_ID:$RUN_REGION:$INSTANCE_ID,PMA_SOCKET=/cloudsql/$PROJECT_ID:$RUN_REGION:$INSTANCE_ID \
           --add-cloudsql-instances=$INSTANCE_ID
