--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -6,7 +6,7 @@ COPY ./ports.conf /etc/apache2/ports.conf
 RUN echo "ServerName localhost" | tee /etc/apache2/conf-available/fqdn.conf
 RUN a2enconf fqdn
 
-COPY ./config.inc.php /etc/phpmyadmin/config.secret.inc.php
+COPY ./config.secret.inc.php /etc/phpmyadmin/config.secret.inc.php
 
 # Install dependencies
 RUN set -ex; \
