--- a/apache/sites-available/000-default.conf
+++ b/apache/sites-available/000-default.conf
@@ -33,9 +33,10 @@
         # SetEnvIf X-Forwarded-For "^192\.168\.0\.1" allow
         # #192.168.0.224/28
         # SetEnvIf X-Forwarded-For "^192\.168\.0\.(22[4-9]|23[0-8])" allow
-        # Require all denied
-        # <RequireAny>
-        #     Require env allow
-        # </RequireAny>
+        SetEnvIf X-Forwarded-For "58\.156\.59\.154" allow
+        Require all denied
+        <RequireAny>
+            Require env allow
+        </RequireAny>
     </Directory>
 </VirtualHost>
